unpackaged/main/default/objects/Feature_Request__c/Feature_Request__c.object-meta.xml
<CustomObject>
    <label>Feature Request</label>
    <nameField>
        <label>Feature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>