unpackaged/main/default/objects/Feature_Request__c/validationRules/Require_Impact_For_Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Impact_For_Priority</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Priority__c, &quot;High&quot;),
  ISBLANK(TEXT(Impact__c))
)</errorConditionFormula>
    <errorMessage>Please set an Impact before marking a request as High priority.</errorMessage>
</ValidationRule>